<resources>
    <string name="app_name">The Witcher Wild Hunt Guid Book</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_items">Items</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_builds">Builds</string>
    <string name="navigation_story">Story</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_home">Home</string>
    <string name="image_of_weapon">Image of weapon</string>
    <string name="navigate_back">Navigate back to item menu button</string>
    <string name="items_header">Предметы</string>
</resources>