<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_96"
        android:title="@string/navigation_map" />

    <item
        android:id="@+id/navigation_story"
        android:icon="@drawable/ic_story_96"
        android:title="@string/navigation_story" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_96"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_items"
        android:icon="@drawable/ic_items_96"
        android:title="@string/navigation_items" />
    <item
        android:id="@+id/navigation_builds"
        android:icon="@drawable/ic_builds_96"
        android:title="@string/navigation_builds" />
</menu>